--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
   "workbench.colorCustomizations": {
     "activityBar.background": "#0A341E",
     "titleBar.activeBackground": "#0E492A",
-    "titleBar.activeForeground": "#F3FDF8"
+    "titleBar.activeForeground": "#F3FDF8",
+    "tree.indentGuidesStroke": "#05ef3c"
   },
+  "workbench.tree.indent": 15,
+  "workbench.tree.renderIndentGuides": "always",
   // "apc.activityBar": {
   //   "position": "bottom",
   //   "hideSettings": true,
@@ -83,5 +86,5 @@
   "files.associations": {
     ".env*": "dotenv",
     "*.svg": "xml"
-  },
+  }
 }
